--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "TokenOptions": {
+    "Audience": "cagri@cagri.com",
+    "Issuer": "cagri@cagri.com",
+    "AccessTokenExpiration" : 10,
+    "SecurityKey": "mysupersecuritykeymysupersecuritykey"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
